Closed
Bug 1332845
Opened 9 years ago
Closed 9 years ago
Intermittent dom/media/test/test_mediarecorder_principals.html | application crashed [@ mozilla::VideoTrackEncoder::AppendVideoSegment(mozilla::VideoSegment const&)] after Assertion failure: false, at dom/media/encoder/TrackEncoder.cpp:289
Categories
(Core :: Audio/Video: Recording, defect, P3)
Core
Audio/Video: Recording
Tracking
()
RESOLVED
FIXED
mozilla55
| Tracking | Status | |
|---|---|---|
| firefox52 | --- | unaffected |
| firefox-esr52 | --- | unaffected |
| firefox53 | --- | wontfix |
| firefox54 | --- | fixed |
| firefox55 | --- | fixed |
People
(Reporter: intermittent-bug-filer, Assigned: pehrsons)
References
Details
(Keywords: assertion, crash, intermittent-failure)
Attachments
(2 files)
|
59 bytes,
text/x-review-board-request
|
jesup
:
review+
gchang
:
approval-mozilla-beta+
|
Details |
|
59 bytes,
text/x-review-board-request
|
jesup
:
review+
|
Details |
Filed by: philringnalda [at] gmail.com
https://treeherder.mozilla.org/logviewer.html#?job_id=70952111&repo=mozilla-inbound
https://archive.mozilla.org/pub/firefox/tinderbox-builds/mozilla-inbound-macosx64-debug/1485006805/mozilla-inbound_yosemite_r7-debug_test-mochitest-media-bm134-tests1-macosx-build59.txt.gz
| Assignee | ||
Updated•9 years ago
|
Assignee: nobody → pehrson
Rank: 35
status-firefox52:
--- → unaffected
status-firefox53:
--- → affected
Component: Audio/Video → Audio/Video: Recording
Priority: -- → P3
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
Updated•9 years ago
|
status-firefox54:
--- → affected
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
Comment 11•9 years ago
|
||
Any updates on this, Andreas? :)
| Assignee | ||
Comment 12•9 years ago
|
||
I'm able to reproduce.
Status: NEW → ASSIGNED
Flags: needinfo?(pehrson)
| Comment hidden (mozreview-request) |
| Comment hidden (mozreview-request) |
Comment 15•9 years ago
|
||
| mozreview-review | ||
Comment on attachment 8855841 [details]
Bug 1332845 - Remove direct listeners before ending track in TrackUnionStream.
https://reviewboard.mozilla.org/r/127722/#review130462
Attachment #8855841 -
Flags: review?(rjesup) → review+
Comment 16•9 years ago
|
||
| mozreview-review | ||
Comment on attachment 8855840 [details]
Bug 1332845 - Remove listeners before other cleanup in MediaRecorder.
https://reviewboard.mozilla.org/r/127720/#review130464
Attachment #8855840 -
Flags: review?(rjesup) → review+
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
Comment 20•9 years ago
|
||
Pushed by pehrsons@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/76e7f2698291
Remove listeners before other cleanup in MediaRecorder. r=jesup
https://hg.mozilla.org/integration/autoland/rev/9e998b5f1d08
Remove direct listeners before ending track in TrackUnionStream. r=jesup
Comment 21•9 years ago
|
||
| bugherder | ||
https://hg.mozilla.org/mozilla-central/rev/76e7f2698291
https://hg.mozilla.org/mozilla-central/rev/9e998b5f1d08
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
Updated•9 years ago
|
Comment 22•9 years ago
|
||
Thanks for fixing this! Please nominate it for Beta approval when you get a chance :)
Flags: needinfo?(pehrson)
| Assignee | ||
Comment 23•9 years ago
|
||
Comment on attachment 8855840 [details]
Bug 1332845 - Remove listeners before other cleanup in MediaRecorder.
(In reply to Ryan VanderMeulen [:RyanVM] from comment #22)
> Thanks for fixing this! Please nominate it for Beta approval when you get a
> chance :)
Ah, I had the request written already. Was just waiting for a bit of Nightly coverage to answer that question below :-)
Approval Request Comment
[Feature/Bug causing the regression]: Bug 1332584 added the failing assert which gave discoverability. Root cause has been around for a very long time.
[User impact if declined]: Intermittent assertion failures in debug builds. No real impact in prod builds.
[Is this code covered by automated tests?]: Yes, both patches affect common code covered by a multitude of tests.
[Has the fix been verified in Nightly?]: Yes
[Needs manual test from QE? If yes, steps to reproduce]: No
[List of other uplifts needed for the feature/fix]: None
[Is the change risky?]: No
[Why is the change risky/not risky?]: Both patches are short, simple (only changing order of code) and easy to reason about.
[String changes made/needed]: None
This approval request applies to both patches on this bug.
Flags: needinfo?(pehrson)
Attachment #8855840 -
Flags: approval-mozilla-beta?
Comment 25•9 years ago
|
||
Comment on attachment 8855840 [details]
Bug 1332845 - Remove listeners before other cleanup in MediaRecorder.
Fix an intermittent failure. Beta54+. Should be in 54 beta 3.
Attachment #8855840 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 26•9 years ago
|
||
| bugherder uplift | ||
https://hg.mozilla.org/releases/mozilla-beta/rev/43dc349fa417
https://hg.mozilla.org/releases/mozilla-beta/rev/74f3c44c94f2
Flags: in-testsuite+
You need to log in
before you can comment on or make changes to this bug.
Description
•