Bug 1332845 - Remove listeners before other cleanup in MediaRecorder. r=jesup

There was an indirect race from destroying this MediaInputPort before removing
the direct listener.

MozReview-Commit-ID: 7rPzsLL4EvG